--- a/styles/modules/_notifications.scss
+++ b/styles/modules/_notifications.scss
@@ -1,9 +1,14 @@
 .notifications {
+    
+        color: $navText;
   h1 {
     font-size: $tx3b;
     padding: $pad $pad 0;
     margin-bottom: 5px;
   }
+    
+
+
 
   .tabs {
     padding: 0;
