- Cleaned up references to bitcoin and OpenBazaar in text/language files througout - Changed some URIs from bitcoin: to phore:

--- a/js/templates/modals/purchase/payment.html
+++ b/js/templates/modals/purchase/payment.html
@@ -47,7 +47,7 @@
   </div>
 </div>
 <div class="tx6 clrT2">
-  <% const link = `<a class="clrTEm" href="https://www.openbazaar.org/bitcoin">${ob.polyT('purchase.pendingSection.note1Link')}</a>`; %>
+  <% const link = `<a class="clrTEm" href="https://phore.io/buy-phore/">${ob.polyT('purchase.pendingSection.note1Link')}</a>`; %>
   <p><%= ob.polyT('purchase.pendingSection.note1', { link }) %></p>
   <% if (ob.isModerated) { %>
   <p>
