--- a/js/templates/modals/purchase/complete.html
+++ b/js/templates/modals/purchase/complete.html
@@ -23,7 +23,7 @@
     <p><%= ob.polyT('purchase.completeSection.share.body', { link: "<a class='clrTEm' href='https://openbazaar.org'>https://openbazaar.org</a>" }) %></p>
     <div class="flexRow flexKidsExpand gutterH">
       <% var shareURL = "https://openbazaar.org" %>
-      <a class="btn btnThin clrP clrBr" href="https://twitter.com/intent/tweet/?text=<%= ob.polyT('purchase.completeSection.share.shareMsg') %>&url=<%= shareURL %>&hashtags=TradeFree,bitcoin&related=openbazaar">
+      <a class="btn btnThin clrP clrBr" href="https://twitter.com/intent/tweet/?text=<%= ob.polyT('purchase.completeSection.share.shareMsg') %>&url=<%= shareURL %>&hashtags=TradeFree,phore&related=phoremarketplace">
         <span class="flexInline gutterHSm">
           <i class="ion-social-twitter twitterColor"></i><span><%= ob.polyT('purchase.completeSection.share.postToTwitter') %></span>
         </span>
@@ -38,7 +38,7 @@
           <i class="ion-social-pinterest pinterestColor"></i><span><%= ob.polyT('purchase.completeSection.share.postToPinterest') %></span>
         </span>
       </a>
-      <a class="btn btnThin clrP clrBr" href="https://www.tumblr.com/share/link?url=<%= shareURL %>&name=OpenBazaar">
+      <a class="btn btnThin clrP clrBr" href="https://www.tumblr.com/share/link?url=<%= shareURL %>&name=PhoreMarketplace">
         <span class="flexInline gutterHSm">
           <i class="ion-social-tumblr tumblrColor"></i><span><%= ob.polyT('purchase.completeSection.share.postToTumblr') %></span>
         </span>
