Fixed bug with currency display

--- a/js/templates/btcTicker.html
+++ b/js/templates/btcTicker.html
@@ -4,5 +4,5 @@
 </div> -->
 <div class="current-price">
     <!-- <i class="phrIcon margRSm"></i> -->
-    1 <strong class="tx5">PHR</strong> = <%= ob.formatCurrency(ob.currentBTCPrice, ob.localCurrency) %> <strong class="tx5"> <%= ob.localCurrency %></strong> 
+    1 <strong class="tx5">PHR</strong> = <%= ob.currentBTCPrice.toFixed(3) %> <strong class="tx5"> USD</strong> 
   </div>
