--- a/js/templates/btcTicker.html
+++ b/js/templates/btcTicker.html
@@ -1,8 +1,4 @@
-<!-- <div class="flexVCent clrP clrBr clrSh3 contentBox padSm toolTipNoWrap <% if (ob.localCurrency === 'PHR') print('hide') %>" data-tip="<%= ob.polyT('pageNav.toolTip.currentPrice') %>">
-  <i class="phrIcon margRSm"></i>
-  <strong class="tx5"><%= ob.formatCurrency(ob.currentBTCPrice, ob.localCurrency) %></strong>
-</div> -->
 <div class="current-price">
     <!-- <i class="phrIcon margRSm"></i> -->
-    1 <strong class="tx5">PHR</strong> = <%= ob.currentBTCPrice.toFixed(3) %> <strong class="tx5"> USD</strong> 
+    1 <strong class="tx5">PHR</strong> = <%= ob.currentBTCPrice.toFixed(3) %> <strong class="tx5"> <%= ob.localCurrency == "PHR" ? "USD" : ob.localCurrency %></strong> 
   </div>
